<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_fetching_beneficiaries">Failed to fetch Beneficiaries</string>
    <string name="error_fetching_beneficiary_template">Failed to fetch Beneficiary Template</string>
    <string name="error_fetching_template">Failed to fetch template</string>
    <string name="error_creating_beneficiary">Failed to create Beneficiary</string>
    <string name="error_updating_beneficiary">Failed to update Beneficiary</string>
    <string name="error_deleting_beneficiary">Failed to delete Beneficiary</string>
    <string name="error_loan_account_withdraw">Error in withdrawing loan account</string>
    <string name="error_fetching_third_party_transfer_template">Error to fetch Third Party Transfer
        template
    </string>
...
    <string name="submit_beneficiary">Submit Beneficiary</string>
    <string name="enter_office_name">Enter Beneficiary Office Name</string>
    <string name="enter_beneficiary_name">Enter Beneficiary Name</string>
    <string name="enter_transfer_limit">Enter Transfer Limit</string>
    <string name="enter_account_number">Enter Beneficiary Account Number</string>
    <string name="choose_account_type">Select Account Type from the dropdown</string>
    <string name="beneficiary_created_successfully">Beneficiary created successfully</string>
    <string name="beneficiary_updated_successfully">Beneficiary updated successfully</string>
    <string name="update_beneficiary">Update Beneficiary</string>
    <string name="delete_beneficiary">Delete Beneficiary</string>
    <string name="delete_beneficiary_confirmation">Are you sure you want to delete this
        Beneficiary
    </string>
...
