...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsLarge"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_add_beneficiary_manually"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
...
